# rust-playground

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Dockerfile  Makefile  README.md  Tiltfile  compose.yaml  go.mod  go.sum  justfile  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  vite.config.js  workspace.json
.github/workflows/: ci.yml  daily.yml  label.yml  manual-docker.yaml  node.yml  release.yml  tag.yml
apps/auth-app/: Tiltfile  jest.config.ts  project.json
apps/auth-app/k8s/base/: deployment.yml  kustomization.yml  service.yml
apps/auth-app/src/app/: app.controller.spec.ts  app.service.spec.ts  app.service.ts
apps/controller1/: Dockerfile  Makefile  PROJECT  README.md  Tiltfile  go.mod  go.sum  main.go  project.json
apps/controller1/api/v1alpha1/: containerinjector_types.go  groupversion_info.go  zz_generated.deepcopy.go
apps/controller1/config/crd/: kustomization.yaml
apps/controller1/config/crd/bases/: yuri.dev.yurikrupnik_containerinjectors.yaml
apps/controller1/config/crd/patches/: cainjection_in_containerinjectors.yaml  webhook_in_containerinjectors.yaml
apps/controller1/config/default/: kustomization.yaml
apps/controller1/config/manager/: controller_manager_config.yaml  kustomization.yaml
apps/controller1/config/rbac/: containerinjector_editor_role.yaml  containerinjector_viewer_role.yaml  role.yaml
apps/controller1/config/samples/: yuri_v1alpha1_containerinjector.yaml
apps/controller1/controllers/: containerinjector_controller.go  suite_test.go
apps/controller1/k8s/: Dockerfile
apps/controller1/k8s/base/: deployment.yml  kustomization.yml  service.yml
apps/docs/: jest.config.ts  project.json
apps/go/cli-get-kubeconfig/: main.go  project.json
apps/kube-controller/: Cargo.toml  project.json
apps/kube-controller/src/: crd.rs  main.rs
apps/personal/blog/: .eslintrc.json  jest.config.ts  project.json
apps/personal/blog-e2e/: project.json
apps/personal/blog-e2e/src/e2e/: app.cy.ts
apps/personal/blog/pages/: index.tsx
apps/personal/blog/specs/: index.spec.tsx
apps/pokemon/api/: main.go  project.json
apps/rust/actix/: Cargo.toml  project.json
apps/rust/actix/src/: main.rs  todo.rs  user.rs
apps/rust/actix/src/users/: model.rs
apps/rust/axum/: Cargo.toml  project.json
apps/rust/axum/src/: main.rs
apps/rust/projects/: Cargo.toml  project.json
apps/rust/projects/src/: args.rs  main.rs
apps/rust/rocket/: Cargo.toml  project.json
apps/rust/rocket/src/: main.rs
apps/rust/salvo/: Cargo.toml  project.json
apps/rust/salvo/src/: main.rs
apps/rust/tide/: Cargo.toml  project.json
apps/rust/tide/src/: main.rs
apps/rust/users/: Cargo.toml  project.json
apps/rust/users/src/: main.rs  model.rs  product.rs  test.rs
apps/rust/warp/: Cargo.toml  project.json
apps/rust/warp/src/: main.rs
apps/rust/yew/: project.json
apps/users-client-e2e/: project.json
apps/users-client-e2e/src/e2e/: app.cy.ts
apps/users/api/: Tiltfile  main.go  project.json
apps/users/api/k8s/base/: deployment.yml  ingress.yaml  kustomization.yml  service-account.yaml  service.yml
apps/users/client/: .eslintrc.js  Tiltfile  jest.config.ts  package.json  project.json  tsconfig.json
apps/users/client/k8s/base/: configMap.yaml  default.conf  deployment.yml  haproxy.cfg  ingress.yaml  kustomization.yml  nginx.conf  patch.yaml  service-account.yaml  service.yml
apps/users/client/src/: App.module.css  App.tsx  index.tsx
apps/users/client/src/components/Predictions/: Predictions.tsx
gitops/: Makefile  Tiltfile  kustomization.yml
gitops/argo-workflows/: hello-world.yaml  kustomization.yml  namespace.yaml
gitops/argocd/: app.yaml  ingress.yaml  install-argo-workflows.yaml  job.yaml  kustomization.yml  namespace.yaml
gitops/cert-manager/: 1.selfsigned-issuer.yaml  argo-cert-manager.yaml  kustomization.yml  namespace.yaml
gitops/istio/kiali/: ingress.yaml
gitops/metallb/: config.yaml  kustomization.yml
gitops/sealed-secret/: app1.yaml  app2.yaml  external-secret.yaml
gitops/storage/: pv.yaml  pvc.yaml
k8s/: cluster.yaml
k8s/base/: composition.yml  deployment.yml  env.txt  ingress.yaml  kustomization.yml  namespace.yaml  secrets.yaml  service.yml  storage.yaml
k8s/base/api/: deployment.yml  kustomization.yml  service.yml
k8s/base/argocd/base/: apps.yml  kustomization.yml  namespace.yml
k8s/base/crossplane/: kustomization.yml  namespace.yml
k8s/base/flux-system/: gotk-sync.yaml
k8s/base/helm/: Tiltfile
k8s/base/helm/manifests/: consul.yaml  grafana.yaml  kustomization.yml  redis.yaml  vault.yaml
k8s/base/kaniko/: pod.yaml
k8s/base/kubevela/base/: app.yaml  kustomization.yaml
k8s/base/nginx/: deployment.yml  service.yml
k8s/base/secrets/: secrets.yaml
k8s/base/storage/: kustomization.yml
k8s/base/vault/: values.yaml
k8s/overlays/dev/: kustomization.yml
k8s/overlays/production/: cpu_count.yml  ingress-patch.yaml  kustomization.yml  replica_count.yml
k8s/overlays/staging/: kustomization.yml
libs/fiber-he/: fiber-he.go  fiber-he_test.go  project.json
libs/go/fiber-helpers/: go-fiber-helpers.go  go-fiber-helpers_test.go  project.json
libs/go/models/: go-models.go  go-models_test.go  project.json
libs/go/mongodb/: go-mongodb.go  project.json
libs/go/myutils/: go-myutils.go  go-myutils_test.go  project.json
libs/rust/cli-test/: Cargo.toml  project.json
libs/rust/cli-test/src/: lib.rs
libs/rust/mongo-connect/: Cargo.toml  project.json
libs/rust/mongo-connect/src/: lib.rs
proto/: payments.proto
scripts/: docker.sh
