[workspace]
members = [
    "apps/rust/yew",
    "apps/rust/warp",
    "apps/rust/tide",
    "apps/rust/axum",
    "apps/rust/rocket",
    "apps/rust/salvo",
    "apps/rust/actix",
    "apps/kube-controller",
    "apps/rust/projects",
    "libs/rust/cli-test",
    "libs/rust/mongo-connect",
    "apps/rust/users"
]
