[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
log = "0.4"
futures = "0.3"
utoipa = { version = "2.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2.0.1", features = ["actix-web"] }
once_cell = "1"
mongodb = "2"
thiserror = "1"
tracing-subscriber = "0.3"
tracing = "0.1"
