[package]
name = "projects"
version = "0.1.0"
edition = "2021"
description = "My desc"
authors = ["Yuri"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
actix-web = "4.1.0"
log = "0.4.17"
mongodb = "2.3.0"
serde = "1.0.143"
serde_json = "1.0.83"
tokio = "1.20.1"
serde_json_lodash = "0.1.16"
ureq = "2.5.0"
thiserror = "1.0.32"
dotenv = "0.15.0"
clap = { version = "3.2.16", features = ["derive"] }
reqwest = "0.11.11"
