[package]
name = "projects"
version = "0.1.0"
edition = "2021"
description = "My desc"
authors = ["Yuri"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
actix-web = "4.2.1"
log = "0.4.17"
mongodb = "2.3.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
tokio = "1.22.0"
serde_json_lodash = "0.1.16"
ureq = "2.5.0"
thiserror = "1.0.37"
dotenv = "0.15.0"
clap = { version = "3.2.23", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }