[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
mongodb = "2.3.0"
serde = "1.0.143"
tokio = "1.20.1"
log = "0.4.17"
mongo_connect = { path = "../../../libs/rust/mongo-connect" }

[dev-dependencies]
cargo-audit = "0.17.0"
cargo-tarpaulin = "0.20.1"
cargo-nextest = "0.9.33"
