[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
mongodb = "2.3.0"
serde = "1.0.144"
log = "0.4.17"
mongo_connect = { path = "../../../libs/rust/mongo-connect" }

tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
kube = { version = "0.74.0", default-features = true, features = ["derive", "runtime"] } # Library for talking to Kubernetes API
k8s-openapi = { version = "0.15", default-features = false, features = ["v1_22"] } # Kube-rs depends on k8s-openapi
schemars = "0.8"
serde_yaml = "0.9.11"
futures = "0.3"
thiserror = "1.0.33"
kube-derive = { version = "0.74.0" }
